<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGetMethods" >
    <EditText
        android:id="@+id/e_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_id"
        app:layout_constraintEnd_toStartOf="@+id/get_post_by_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_post_by_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_id"
        app:layout_constraintEnd_toStartOf="@+id/get_post_query"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_post_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_query"
        app:layout_constraintEnd_toStartOf="@+id/get_post_map"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_post_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_map"
        app:layout_constraintEnd_toStartOf="@+id/btn_get_all"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_get_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>