<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragments_container"
    tools:context=".MainActivity" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            app:layout_constraintEnd_toStartOf="@+id/get_post_by_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/get_post_by_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_id"
            android:onClick="onButtonClick"
            app:layout_constraintEnd_toStartOf="@+id/get_post_query"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/get_post_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_query"
            android:onClick="onButtonClick"
            app:layout_constraintEnd_toStartOf="@+id/get_post_map"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/get_post_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_map"
            android:onClick="onButtonClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_posts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_id" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
